@@ -12,6 +12,10 @@
   * Don't transform the composite image colorspace, set it instead.
   * Interpret -border 5% as 5% of width and 5% of height (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21537).
+  * Don't normalize zero-sum kernels (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21584).
+  * Transform grayscale to linear RGB if fill color is non-gray (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21586).
 
 2012-07-30  6.7.8-7 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.8-7, SVN revision 8766.
